@@ -1,3 +1,7 @@
+2016-06-03  Pietro Cerutti <gahr@gahr.ch>
+
+	* generic/threadCmd.c: Add parenthesis to bit-shift macros [Tkt 957dbe231c]
+
 2016-05-31  Pietro Cerutti <gahr@gahr.ch>
 
 	* generic/threadSvCmd.c: Implement [tsv::handlers] command [Tkt 72b8ee4c76]
